<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="82dp"
        android:layout_marginTop="76dp"
        android:text="@string/welcome_to_alc_4_0"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonALC"
        android:layout_width="218dp"
        android:layout_height="67dp"
        android:layout_marginTop="72dp"
        android:background="#FFC107"
        android:text="@string/about_alc"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textWelcome"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/textWelcome"
        app:layout_constraintTop_toBottomOf="@+id/textWelcome" />

    <Button
        android:id="@+id/buttonProfile"
        android:layout_width="231dp"
        android:layout_height="73dp"
        android:layout_marginTop="68dp"
        android:background="#FFC107"
        android:text="@string/my_profile"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/buttonALC"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="@+id/buttonALC"
        app:layout_constraintTop_toBottomOf="@+id/buttonALC" />

</android.support.constraint.ConstraintLayout>